k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webhook-gateway-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webhook-gateway
  template:
    metadata:
      labels:
        app: webhook-gateway
    spec:
      containers:
        - name: webhook-gateway
          image: stokei/webhook-gateway:latest
          ports:
            - containerPort: 80
              protocol: TCP
          resources: {}
          imagePullPolicy: Always
