k8s/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: webhook-gateway-service
spec:
  type: ClusterIP
  selector:
    app: webhook-gateway
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
#    - name: https
#      protocol: TCP
#      port: 443
#      targetPort: 80
